--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1"
   },
+  "engines": {
+    "node": ">= 8.0"
+  },
   "scripts": {
     "start": "botpress start",
     "test": "echo \"Error: no test specified\" && exit 1"
