--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "node-sass": "^4.7.2",
+    "npm": "^5.6.0",
     "true-case-path": "^1.0.2"
   },
   "engines": {
