added new modules

--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "botpress": "^0.2.1",
     "botpress-analytics": "^2.0.6",
     "botpress-api.ai": "^2.1.7",
+    "botpress-audience": "^1.0.2",
     "botpress-broadcast": "^2.0.3",
     "botpress-dialog": "^1.0.12",
+    "botpress-hitl": "^1.0.10",
+    "botpress-irc": "^2.0.1",
     "botpress-messenger": "^2.2.9",
+    "botpress-monetize": "^1.0.2",
     "botpress-rivescript": "^2.0.7",
     "botpress-scheduler": "^2.0.4",
     "botpress-subscription": "^2.0.5",
     "botpress-terminal": "^1.0.2",
     "botpress-webhook": "^1.0.1",
+    "botpress-wit": "^2.0.12",
     "foobar": "^1.1.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
